# slash

./: build.sh  clean.sh  compiler.cabal  main  main.hi  main.hs  parser  parser.hi  parser.hs  readme.md  test.sl
Parser/: Combinator.hi  Combinator.hs  Expression.hs  MathExpression.hs  ProgramNode.hs
Tests/: MathExpression.hs
app/: Main.hs  hello  hello.asm  hello.c  hello.s  hello_world  hello_world.sl
app/Parser/: Combinator.hs
sample-programs/: a.out  hello  hello.asm  hello_world.sl  std.c  test.asm  test.c
src/Generator/: Generator.hs  ProgramState.hs  SymbolTable.hs  X86Assembly.hs
src/Parser/: Combinator.hs  Expression.hs  ExpressionParser.hs  ExpressionTypes.hs  FloatExpression.hs  FloatExpressionParser.hs  IntegerExpression.hs  IntegerExpressionParser.hs  MathExpression.hs  MathExpressionParser.hs  PrintStatementParser.hs  ProgramNode.hs  ReturnType.hs  StatementParser.hs  StringExpression.hs  StringExpressionParser.hs  VariableNameParser.hs
tests/: Main.hs  MathExpressionTests.hs  StringExpressionTests.hs  test.txt
