cabal-version:      2.4
name:               compiler
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         siddiqueshafin20@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library internal-lib
    exposed-modules:
        Parser.Combinator
        Parser.Expression
        Parser.IntegerExpression
        Parser.MathExpression
        Parser.ProgramNode
    
    build-depends:
        base ^>=4.14.3.0

    hs-source-dirs: 
        src

executable compiler
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:   
        internal-lib,
        base ^>=4.14.3.0
    hs-source-dirs:   
        app
    default-language: Haskell2010
