cabal-version:      2.4
name:               compiler
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         siddiqueshafin20@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library internal-lib
    exposed-modules:
        Parser.Combinator
        Parser.ExpressionParser
        Parser.IntegerExpressionParser
        Parser.MathExpressionParser
        Parser.ProgramNode
        Parser.FloatExpressionParser
        Parser.StringExpressionParser
        Parser.VariableNameParser
        Parser.ReturnType
        Generator.Generator
        Generator.X86Assembly
        Generator.SymbolTable
        Generator.ProgramState
    build-depends:
        base ^>=4.14.3.0
        ,containers
    hs-source-dirs: 
        src

executable compiler
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:   
        internal-lib,
        base ^>=4.14.3.0
        ,process ^>=1.6.15.0

    hs-source-dirs:   
        app
    default-language: Haskell2010

Test-Suite tests
    Type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base ^>=4.14.3.0,
        test-framework,
        test-framework-hunit,
        HUnit,
        internal-lib
    hs-source-dirs: Tests
    default-language: Haskell2010
 


